--- a/noonno/resource/css/products.css
+++ b/noonno/resource/css/products.css
@@ -146,6 +146,9 @@
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s cubic-bezier(0.21, 0.58, 0.76, 0.9);
+  -webkit-transition: all 0.3s cubic-bezier(0.21, 0.58, 0.76, 0.9);
+  -ms-transition: all 0.3s cubic-bezier(0.21, 0.58, 0.76, 0.9);
+  -moz-transition: all 0.3s cubic-bezier(0.21, 0.58, 0.76, 0.9);
 }
 .prd-list-box .prd:hover .hover-cont {
   opacity: 1;
