--- a/noonno/resource/css/products.css
+++ b/noonno/resource/css/products.css
@@ -111,7 +111,32 @@
   background: #ddd;
   margin: 13px 0;
 }
+.prd-search-reset {
+  text-align: center;
+}
 
+.prd-search-reset button span {
+  font-size: 14px;
+  color: #666;
+  margin-left: 5px;
+  font-weight: 500;
+}
+.prd-search-reset button.reset {
+  margin-right: 7px;
+}
+.prd-search-reset button div {display: flex;align-items: center;text-align: center;}
+
+.prd-search-reset {
+  margin-top: 32px;
+}
+
+.prd-search-reset button {
+  padding: 10px 24px;
+  border: 1px solid #AAAAAA;
+  box-sizing: border-box;
+  border-radius: 5px;
+  display: inline-block;
+}
 /* list */
 .prd-list-wrap {
   margin: 73px 0 120px;
