--- a/noonno/resource/css/common_kim.css
+++ b/noonno/resource/css/common_kim.css
@@ -1755,7 +1755,7 @@ text-align:left;
     background:url(../img/sub/pop_close_btn.png) no-repeat;
     z-index:1;
 }
-.layer_pop .container_pop{ padding:40px 100px 50px 40px;}
+.layer_pop .container_pop{ padding:40px 100px 50px 100px;}
 .layer_pop .container_pop > .tit{
     font-weight: 700;
     font-size: 30px;
@@ -1788,6 +1788,33 @@ font-size: 20px;
 line-height: 35px;
 color: #3B302F;}
 .compare_table table tr th{text-align:center; padding:13px 0; font-weight: 400;
-font-size: 16px;
+font-size: 16px; vertical-align:middle;
 line-height: 25px; color: #3B302F;}
-.compare_table table tr td{padding:13px 30px;}
+.compare_table table tr td{padding:13px 30px; text-align:center;}
+.compare_table{margin-top:25px;}
+.compare_table table tr:first-child td .tit{
+    margin-top:8px; font-weight: 500;
+    font-size:20px;
+    line-height:35px;
+
+}
+.compare_table table tr:first-child td, .compare_table table tr:first-child th{border-top:none;}
+.compare_table table tr:first-child td .img{width:210px; margin:0 auto;}
+.compare_table table tr:first-child td .img img{width:100%;}
+.compare_table table tr:nth-child(2) td{border-top:2px solid #333}
+.compare_table table tr:nth-child(2) th{border-top:2px solid #333; }
+.compare_table table tr td{font-weight: 400; color:#666;
+font-size: 16px;
+line-height: 25px;}
+.compare_table table tr td, .compare_table table tr th{border-top:1px solid #ddd;}
+.compare_table table tr:last-child td, .compare_table table tr:last-child th{border-top:2px solid #333;}
+.compare_table table tr td a{margin-top:17px;
+    display:inline-block;
+    text-align:center;
+    border: 2px solid #ED1C24;
+    background:#fff;
+    border-radius: 30px;
+    padding:15px 37px;
+    color: #ED1C24;
+    font-weight:500;
+}
