--- a/noonno/resource/js/fullpage/fullpage.css
+++ b/noonno/resource/js/fullpage/fullpage.css
@@ -108,7 +108,7 @@ html.fp-enabled,
     right: 17px;
 }
 #fp-nav.fp-left {
-    left: 17px;
+    left: 80px;
 }
 .fp-slidesNav{
     position: absolute;
@@ -135,11 +135,12 @@ html.fp-enabled,
 #fp-nav ul li,
 .fp-slidesNav ul li {
     display: block;
-    width: 14px;
-    height: 13px;
-    margin: 7px;
+    width: 10px;
+    height: 10px;
+
     position:relative;
 }
+#fp-nav ul li + li{margin-top:30px;}
 .fp-slidesNav ul li {
     display: inline-block;
 }
@@ -154,37 +155,26 @@ html.fp-enabled,
     text-decoration: none;
 }
 #fp-nav ul li a.active span,
-.fp-slidesNav ul li a.active span,
-#fp-nav ul li:hover a.active span,
-.fp-slidesNav ul li:hover a.active span{
-    height: 12px;
-    width: 12px;
-    margin: -6px 0 0 -6px;
-    border-radius: 100%;
- }
+.fp-slidesNav ul li a.active span{
+    background:#ED1C24;
+}
 #fp-nav ul li a span,
 .fp-slidesNav ul li a span {
     border-radius: 50%;
     position: absolute;
     z-index: 1;
-    height: 4px;
-    width: 4px;
+    height: 10px;
+    width: 10px;
     border: 0;
-    background: #333;
-    left: 50%;
-    top: 50%;
-    margin: -2px 0 0 -2px;
+    background: #aaa;
+
+
     -webkit-transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
     -o-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
 }
-#fp-nav ul li:hover a span,
-.fp-slidesNav ul li:hover a span{
-    width: 10px;
-    height: 10px;
-    margin: -5px 0px 0px -5px;
-}
+
 #fp-nav ul li .fp-tooltip {
     position: absolute;
     top: -2px;
